Implemented app's basic functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Popular-Movie-App</string>
-    <string name="action_refresh">Refresh</string>
-    <string name="action_sort">Sort</string>
+    <string name="action_sort_top_rated">Sort by : Top Rated</string>
+    <string name="action_sort_popular">Sort by : Popularity</string>
 </resources>
