--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,6 @@
     <string name="create_account">Create an account</string>
     <string name="user_name_hint">Name</string>
     <string name="user_city_hint">City</string>
-    <string name="email_hint">E-mail address</string>
     <string name="password_hint">Password</string>
     <string name="button_already_registered">Do you have an account? Login</string>
     <string name="button_sign_up">Sign Up</string>
@@ -38,4 +37,16 @@
     <string name="check_internet_connectivity">Check internet connectivity</string>
     <string name="toast_problem_creating_account">Problem creating an account</string>
     <string name="account_created_now_verify_it">Account created successfully. Now go to your mailbox and verify it.</string>
+
+    <string name="login_heading">Login</string>
+    <string name="main_button_login">Login Now</string>
+    <string name="button_forgot_password">Don\'t you remember your password?</string>
+    <string name="divider_or">Or</string>
+    <string name="button_google_login">Sign in with Google</string>
+    <string name="button_sigh_up">Don\'t have an account yet? Sign Up</string>
+    <string name="create_account_heading">Create an account</string>
+    <string name="reset_password_heading">Send reset password instruction</string>
+    <string name="button_sign_not_registered">Sign me up instead</string>
+    <string name="email_hint">E-mail address</string>
+    <string name="toast_authentication_failed">Authentication failed. Please check your email or passowrd</string>
 </resources>
