--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="toast_authentication_failed">Authentication failed. Please check your email or passowrd</string>
     <string name="toast_password_reset_instruction_sent">Password reset instructions sent to your registered email</string>
     <string name="error_email_not_registered">Please check your email. Looks like you\'re not registered with us</string>
+    <string name="sign_out">Sign out</string>
 </resources>
